--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>aqui es el body de app-root</h1>
+<div class="main-container">
+        <router-outlet>
+
+        </router-outlet>          
+</div>
